--- a/demo/symfony8/composer.json
+++ b/demo/symfony8/composer.json
@@ -76,19 +76,15 @@
     },
     "repositories": [
         {
-            "name": "performance",
             "type": "path",
-            "url": "/bundles"
-        },
-        {
-            "type": "path",
-            "url": "/bundles"
+            "url": "/var/performance-bundle"
         }
     ],
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "*",
         "nowo-tech/twig-inspector-bundle": "^1.0",
         "symfony/debug-bundle": "8.0.*",
+        "symfony/var-dumper": "8.0.*",
         "symfony/web-profiler-bundle": "8.0.*"
     }
 }
