--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -69,6 +69,7 @@ services:
             $tableStatusChecker: '@?Nowo\PerformanceBundle\Service\TableStatusChecker'
             $dependencyChecker: '@?Nowo\PerformanceBundle\Service\DependencyChecker'
             $recordRepository: '@?Nowo\PerformanceBundle\Repository\RouteDataRecordRepository'
+            $checkTableStatus: '%nowo_performance.check_table_status%'
         tags:
             - { name: data_collector, template: '@NowoPerformanceBundle/Collector/performance.html.twig', id: 'performance', priority: 300 }
 
