--- a/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
+++ b/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
@@ -65,6 +65,10 @@ nowo_performance:
     # Default: true (enabled)
     enable_logging: true
 
+    # Check that routes_data and routes_data_records tables exist and are complete
+    # (Web Profiler, dashboard diagnose, CLI diagnose). Set to false to skip these checks and save DB queries.
+    check_table_status: true
+
     # List of route names to ignore (not tracked)
     # Routes in this list will not have their performance metrics recorded
     ignore_routes:
