--- a/demo/symfony8/Dockerfile
+++ b/demo/symfony8/Dockerfile
@@ -1,20 +1,35 @@
-FROM php:8.4-fpm
+# FrankenPHP (Dunglas) - PHP 8.4 Alpine
+# https://frankenphp.dev/docs/docker/
+FROM dunglas/frankenphp:1-php8.4-alpine
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apk add --no-cache \
     git \
     unzip \
-    libzip-dev \
-    libpq-dev \
-    libicu-dev \
-    && docker-php-ext-install zip pdo pdo_mysql pdo_pgsql intl \
-    && rm -rf /var/lib/apt/lists/*
+    bash \
+    curl \
+    ca-certificates
+
+# Install PHP extensions (Doctrine ORM + MySQL)
+RUN install-php-extensions zip pdo_mysql intl
 
 # Install Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Set working directory
+# Configure git safe directory
+RUN git config --global --add safe.directory /app
+
 WORKDIR /app
 
-# Set environment
 ENV COMPOSER_ALLOW_SUPERUSER=1
+ENV PATH="/app/vendor/bin:${PATH}"
+
+# Entrypoint: ensure var dirs exist and are writable, then run FrankenPHP (keep process in foreground)
+RUN echo '#!/bin/sh' > /usr/local/bin/docker-entrypoint.sh && \
+    echo 'set -e' >> /usr/local/bin/docker-entrypoint.sh && \
+    echo 'mkdir -p /app/var/cache /app/var/log' >> /usr/local/bin/docker-entrypoint.sh && \
+    echo 'chmod -R 777 /app/var' >> /usr/local/bin/docker-entrypoint.sh && \
+    echo 'exec frankenphp run --config /etc/frankenphp/Caddyfile --adapter caddyfile' >> /usr/local/bin/docker-entrypoint.sh && \
+    chmod +x /usr/local/bin/docker-entrypoint.sh
+
+ENTRYPOINT ["docker-entrypoint.sh"]
