feat(docs): enhance README and configuration documentation
- Updated the README.md to include new screenshots and detailed descriptions of the performance metrics dashboard and advanced statistics views.
- Improved the configuration documentation in CONFIGURATION.md to reflect new options and defaults, including access records and dashboard settings.
- Added new images for the dashboard views to the documentation for better visual guidance.
- Clarified installation steps in INSTALLATION.md regarding access records and table creation commands.

--- a/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
+++ b/.symfony/recipe/nowo-tech/performance-bundle/0.0.1/config/packages/nowo_performance.yaml
@@ -71,10 +71,12 @@ nowo_performance:
 
     # List of route names to ignore (not tracked)
     # Routes in this list will not have their performance metrics recorded
+    # Supports literal names and glob patterns (e.g. web_profiler*)
     ignore_routes:
-        - '_wdt'          # Web Debug Toolbar
-        - '_profiler'     # Web Profiler
-        - '_error'        # Error pages
+        - '_wdt'           # Web Debug Toolbar
+        - '_profiler'      # Symfony Profiler
+        - 'web_profiler*'  # WebProfilerBundle routes
+        - '_error'         # Error pages
 
     # HTTP status codes to track and calculate ratios for
     # Only the configured status codes will be tracked and displayed in the dashboard
