feat(docker): enhance Docker setup and configuration
- Updated Dockerfiles to use PHP 8.2 Alpine for improved performance and compatibility.
- Refactored docker-compose files to streamline service definitions and ensure consistent HTTP port usage across demos.
- Removed deprecated docker-compose.test.yml file and integrated testing into the main docker-compose setup.
- Enhanced Makefile with new commands for rebuilding images, restarting containers, and updating bundles.
- Improved PHP-CS-Fixer configuration for better code style adherence and added support for Symfony conventions.
- Updated README and demo documentation to reflect changes in access URLs and setup instructions.

--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,9 @@
             "Nowo\\PerformanceBundle\\Tests\\": "tests/"
         }
     },
+    "archive": {
+        "exclude": ["/demo"]
+    },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
@@ -81,7 +84,7 @@
     "prefer-stable": true,
     "scripts": {
         "test": "phpunit",
-        "test-coverage": "phpunit --coverage-html coverage --coverage-clover coverage.xml",
+        "test-coverage": "phpunit --coverage-html coverage --coverage-clover coverage.xml --coverage-text",
         "cs-check": "php-cs-fixer fix --dry-run --diff",
         "cs-fix": "php-cs-fixer fix",
         "rector": "rector process src tests --dry-run",
