--- a/demo/symfony7/docker-compose.yml
+++ b/demo/symfony7/docker-compose.yml
@@ -1,3 +1,4 @@
+name: performance-bundle-demo-symfony-7
 services:
   php:
     build:
@@ -6,7 +7,7 @@ services:
     container_name: performance-demo-symfony7-php
     working_dir: /app
     ports:
-      - "${PORT:-8000}:443"
+      - "${PORT:-8000}:80"
     volumes:
       - .:/app
       # Mount bundle root so the path repo symlink works and code changes are visible
@@ -16,11 +17,6 @@ services:
       - COMPOSER_ALLOW_SUPERUSER=1
       - APP_ENV=${APP_ENV:-dev}
       - DATABASE_URL=mysql://${MYSQL_USER:-demo_user}:${MYSQL_PASSWORD:-password}@mysql:3306/${MYSQL_DATABASE:-performance_demo}?serverVersion=8.0&charset=utf8mb4
-      # Ensure 5xx errors return a response body (FrankenPHP/Caddy can sometimes return empty 500). Newlines required: Caddyfile forbids tokens after "{" on same line.
-      - |
-        CADDY_SERVER_EXTRA_DIRECTIVES=handle_errors 5xx {
-          respond "{err.status_code} {err.status_text}" {err.status_code}
-        }
     depends_on:
       mysql:
         condition: service_healthy
